tests/machine/x/ocaml/map_membership.error
File "/tmp/TestOCamlCompiler_VMValid_Goldenmap_membership4079959471/001/map_membership.ml", line 22, characters 18-57:
22 | let m : record1 = [("a",Obj.repr (1));("b",Obj.repr (2))]
                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression should not be a list literal, the expected type is
       record1
